# quantum-encoding-pytorch

./: .gitignore  README.md  pyproject.toml
examples/: usage_example.py
quantum_encoding/: __init__.py  layer.py
quantum_encoding/benchmarks/: __init__.py  cli.py  data.py  models.py  runner.py  train.py
reports/: benchmark_results.json
tests/: reference.py  test_benchmarks.py  test_layer.py
